# tasmota_api

./: README.md  pyproject.toml
tasmota/: __init__.py  discovery.py  light.py  tasmota.py
