[tool.poetry]
name = "tasmota-rest"
version = "0.1.0"
description = "Connect to and control Tasmota devices directly via the REST API"
authors = ["Ian Epperson <ian@epperson.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
