[tool.poetry]
name = "tasmota"
version = "0.2.3"
description = "Connect to and control Tasmota devices directly via the REST API or via an MQTT server."
authors = ["Ian Epperson <ian@epperson.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
paho-mqtt = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
